2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_global.py:
	  Add a test for globals, same as test13.
	* test/input/test_global.py:
	  Test it without and with -g as the test input says.
	* test/expected/test_global:
	* test/expected/test_global_g:
	  Expected outputs in both cases.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/common.py:
	  Add underscored arguments to expected file name, so that we can
	  run the same input file with more than one argument.
	* test/expected/test_zope_interface:
	* test/expected/test_zope_interface_q:
	  Renamed now that args are encoded in filename.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	* test_expected/test13:
	  For some reason the expected output was warning about the second
	  occurrence of each global, not the first.  So the expected output
	  was wrong.  Even in 2.2 the behaviour was the same.
	  So, regenerate expected output.  Verified it passes from 2.2 to
	  2.7.

2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  In 2.2 and older, __file__ might not be set on the current
	  module.

2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Implement BUILD_SLICE, opcode 133.  Now dis can be pychecked.
	  Not sure what to push on stack for non-const slices though.

2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/Stack.py:
	  Document and pep-8-ify.

2010-12-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Implement PRINT_NEWLINE_TO taking a cue from PRINT_ITEM_TO.
	  Also triggered by twisted.trial.unittest.

2010-12-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* test/input/test_STORE_SLICE_PLUS_0.py:
	* test/test_pychecker_CodeChecks.py:
	  Add support for STORE_SLICE+0, as triggered by