@@ -1,5 +1,13 @@
 2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* pychecker/checker.py:
+	* pychecker/function.py:
+	* pychecker/pcmodules.py:
+	* pychecker/warn.py:
+	  Documentation, comments, and PEP-8.
+
+2010-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* test/test_global.py:
 	  Add a test for globals, same as test13.
 	* test/input/test_global.py:
